# bottymcbotface-rs

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
.github/workflows/: rust.yml
data/: k2so.txt
scripts/: make-release-to-pi
src/: commands.rs  constants.rs  data.rs  events.rs  main.rs  onmessage.rs  scheduled.rs
src/commands/: bestof_cmds.rs  gamenight_cmds.rs  quote_cmds.rs  request_cmds.rs
src/data/: bestof.rs  db.rs  quotes.rs  reactions.rs  requests.rs
src/events/: mentionme.rs
src/onmessage/: mentionme.rs
