[package]
name = "bottymcbotface-rs"
version = "0.1.0"
authors = ["Sean Widmier <seanwidmier@gmail.com>"]
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
