[package]
name = "bottymcbotface-rs"
version = "0.1.0"
authors = ["Sean Widmier <seanwidmier@gmail.com>"]
edition = "2021"

[dependencies]
serenity = { version = "*", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
poise = { version = "*" }
env_logger = { version = "*"}
log = "*"
dotenv = "0.15.0"
tracing = "0.1.23"
tracing-subscriber = "0.3"
