[package]
name = "bottymcbotface-rs"
version = "0.1.0"
authors = ["Sean Widmier <seanwidmier@gmail.com>"]
edition = "2021"

[dependencies]
# Discord bot framework
serenity = { version = "=0.12.1", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }

# Asynchronous runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Command framework
poise = "*"

# Logging
env_logger = "*"
log = "*"
tracing = "0.1.23"
tracing-subscriber = "0.3"

# Environment configuration
dotenv = "0.15.0"

# Random number generation
rand = "0.8.5"
chrono = "0.4.38"
futures = "0.3.31"
sqlx = {version = "0.8.2", features = ["runtime-tokio"] }
